Fixed bug on checkout with empty car, fixed bug in pagination when documents > limit were redefining const value. Fixed view in products if title too big goes '...'

--- a/frontend/src/app/features/catalog/product-list/product-list.component.scss
+++ b/frontend/src/app/features/catalog/product-list/product-list.component.scss
@@ -2,7 +2,6 @@
   display: flex;
   flex-wrap: wrap;
   gap: 1rem;
-  background-color: red;
 }
 
 app-product {
